--- a/app/site/site_templates/index.html
+++ b/app/site/site_templates/index.html
@@ -5,7 +5,7 @@
     <div class="container p-5">
         <div class="row">
             <div class="d-md-flex align-items-center justify-content-evenly">
-                <h1 class="col text-center"><br>Explore our Books</h1>
+                <h1 class="col text-center"><br>Welcome to Your Plant Inventory</h1>
             </div>
         </div>
     </div>
