--- a/app/site/site_templates/profile.html
+++ b/app/site/site_templates/profile.html
@@ -21,7 +21,7 @@
                 </ul>
             </div>
             <div class="row" style="margin-top: 20px;">
-                <div class="col-10 mx-auto"> <!-- Use mx-auto on the col-10 directly -->
+                <div class="col-10 mx-auto"> 
                     <img src="../../static/images/pixabay - wall of opened books.jpg" class="img-fluid p-10" id="profile_image" alt="Wall of opened books.">
                 </div>
             </div>
